--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Иванова&Навай — Психологические консультации онлайн</title>
   </head>
   <body class="b-page">
-    <!-- <header class="header">
+    <header class="header">
       <nav class="header__layout layout">
         <a href="#" class="header__inner-link-logo">
           <img
@@ -70,7 +70,8 @@
           </button>
         </div>
       </nav>
-    </header> -->
+    </header>
+
     <section class="first-screen">
       <div class="first-screen__grid layout">
         <h1 class="first-screen__title">
@@ -135,7 +136,8 @@
           </picture>
           <div class="grid-cart__cart-descr">
             <p class="grid-cart__descr-label">
-              Не можете определиться со сферой деятельности или вас не устраивает уже выбранная область?
+              Не можете определиться со сферой деятельности или вас не
+              устраивает уже выбранная область?
             </p>
             <a
               href="#"
@@ -181,7 +183,8 @@
           </picture>
           <div class="grid-cart__cart-descr">
             <p class="grid-cart__descr-label">
-              Ваш близкий человек пьет? Вы много раз пытались ему помочь, но все без толку?
+              Ваш близкий человек пьет? Вы много раз пытались ему помочь, но все
+              без толку?
             </p>
             <a
               href="#"
@@ -204,7 +207,8 @@
           </picture>
           <div class="grid-cart__cart-descr">
             <p class="grid-cart__descr-label">
-              Вы столкнулись с неразрешимой проблемой? Не знаете как двигаться дальше?
+              Вы столкнулись с неразрешимой проблемой? Не знаете как двигаться
+              дальше?
             </p>
             <a
               href="#"
@@ -236,7 +240,6 @@
             >
           </div>
         </div>
-
 
         <div class="grid-cart grid-cart-8">
           <picture>
@@ -306,12 +309,284 @@
             >
           </div>
         </div>
-
-
-
-
       </div>
     </section>
+    <section class="about-as">
+      <div class="about-as__container layout">
+        <div class="about-as__wrap">
+          <h1 class="about-as__title title">Lorem ipsum dolor sit amet</h1>
+          <div class="psy">
+            <div class="psy__photo">
+              <div class="psy__square"></div>
+              <picture>
+                <source type="image/avif" srcset="images/AnnaNavay.avif" />
+                <source type="image/webp" srcset="images/AnnaNavay.webp" />
+                <img
+                  class="psy__image"
+                  src="images/AnnaNavay.png"
+                  data-src="images/AnnaNavay.png"
+                  alt=""
+                />
+              </picture>
+            </div>
+            <div class="psy__desc psy-desc">
+              <div class="psy-desc__text">
+                <h1 class="psy-desc__title">Анна Навай</h1>
+                <p class="psy-desc__subtitle">
+                  Ведет работу в интегративном подходе, активно использует
+                  методы арт-терапии
+                </p>
+              </div>
+              <div class="psy-desc__desc-time">
+                <div class="psy-desc__inner-time">
+                  <p class="psy-desc__num">7</p>
+                  <p class="psy-desc__label">лет опыта</p>
+                </div>
+                <div class="psy-desc__inner-time">
+                  <p class="psy-desc__num">150</p>
+                  <p class="psy-desc__label">часов личной терапии</p>
+                </div>
+              </div>
+              <div class="psy-desc__slider slider">
+                <div class="slider__contr slider__contr-1"></div>
+                <div class="slider__wrap">
+                  <div class="slider__mov-tape">
+                    <div class="slider__slide"></div>
+                    <div class="slider__slide">
+                      <picture>
+                        <source
+                          type="image/avif"
+                          srcset="images/slider-img/slide1.avif"
+                        />
+                        <source
+                          type="image/webp"
+                          srcset="images/slider-img/slide1.webp"
+                        />
+                        <img
+                          class="slider__slide-img"
+                          src="images/slider-img/slide1.jpg"
+                          data-src="images/slider-img/slide1.jpg"
+                          alt=""
+                        />
+                      </picture>
+                    </div>
+                    <div class="slider__slide">
+                      <picture>
+                        <source
+                          type="image/avif"
+                          srcset="images/slider-img/slide3.avif"
+                        />
+                        <source
+                          type="image/webp"
+                          srcset="images/slider-img/slide3.webp"
+                        />
+                        <img
+                          class="slider__slide-img"
+                          src="images/slider-img/slide3.jpg"
+                          data-src="images/slider-img/slide3.jpg"
+                          alt=""
+                        />
+                      </picture>
+                    </div>
+                    <div class="slider__slide">
+                      <picture>
+                        <source
+                          type="image/avif"
+                          srcset="images/slider-img/slide5.avif"
+                        />
+                        <source
+                          type="image/webp"
+                          srcset="images/slider-img/slide5.webp"
+                        />
+                        <img
+                          class="slider__slide-img"
+                          src="images/slider-img/slide5.jpg"
+                          data-src="images/slider-img/slide5.jpg"
+                          alt=""
+                        />
+                      </picture>
+                    </div>
+                    <div class="slider__slide">
+                      <picture>
+                        <source
+                          type="image/avif"
+                          srcset="images/slider-img/slide-diplom.avif"
+                        />
+                        <source
+                          type="image/webp"
+                          srcset="images/slider-img/slide-diplom.webp"
+                        />
+                        <img
+                          class="slider__slide-img"
+                          src="images/slider-img/slide-diplom.jpg"
+                          data-src="images/slider-img/slide-diplom.jpg"
+                          alt=""
+                        />
+                      </picture>
+                    </div>
+                    <div class="slider__slide">
+                      <picture>
+                        <source
+                          type="image/avif"
+                          srcset="images/slider-img/slide-diplom.avif"
+                        />
+                        <source
+                          type="image/webp"
+                          srcset="images/slider-img/slide-diplom.webp"
+                        />
+                        <img
+                          class="slider__slide-img"
+                          src="images/slider-img/slide-diplom.jpg"
+                          data-src="images/slider-img/slide-diplom.jpg"
+                          alt=""
+                        />
+                      </picture>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider__contr slider__contr-2"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="psy">
+            <div class="psy__desc psy-desc psy__desc--modif">
+              <div class="psy-desc__text psy-desc__text--modif">
+                <h1 class="psy-desc__title">Елена Иванова</h1>
+                <p class="psy-desc__subtitle">
+                  Практика основана на работе с детьми. Имеет большой опыт в
+                  качестве детского психолога в школе
+                </p>
+              </div>
+              <div class="psy-desc__desc-time">
+                <div class="psy-desc__inner-time">
+                  <p class="psy-desc__num">7</p>
+                  <p class="psy-desc__label">лет опыта</p>
+                </div>
+                <div class="psy-desc__inner-time">
+                  <p class="psy-desc__num">150</p>
+                  <p class="psy-desc__label">часов личной терапии</p>
+                </div>
+              </div>
+              <div class="psy-desc__slider slider">
+                <div class="slider__contr slider__contr-1"></div>
+                <div class="slider__wrap">
+                  <div class="slider__mov-tape">
+                    <div class="slider__slide"></div>
+                    <div class="slider__slide">
+                      <picture>
+                        <source
+                          type="image/avif"
+                          srcset="images/slider-img/slide1.avif"
+                        />
+                        <source
+                          type="image/webp"
+                          srcset="images/slider-img/slide1.webp"
+                        />
+                        <img
+                          class="slider__slide-img"
+                          src="images/slider-img/slide1.jpg"
+                          data-src="images/slider-img/slide1.jpg"
+                          alt=""
+                        />
+                      </picture>
+                    </div>
+                    <div class="slider__slide">
+                      <picture>
+                        <source
+                          type="image/avif"
+                          srcset="images/slider-img/slide3.avif"
+                        />
+                        <source
+                          type="image/webp"
+                          srcset="images/slider-img/slide3.webp"
+                        />
+                        <img
+                          class="slider__slide-img"
+                          src="images/slider-img/slide3.jpg"
+                          data-src="images/slider-img/slide3.jpg"
+                          alt=""
+                        />
+                      </picture>
+                    </div>
+                    <div class="slider__slide">
+                      <picture>
+                        <source
+                          type="image/avif"
+                          srcset="images/slider-img/slide5.avif"
+                        />
+                        <source
+                          type="image/webp"
+                          srcset="images/slider-img/slide5.webp"
+                        />
+                        <img
+                          class="slider__slide-img"
+                          src="images/slider-img/slide5.jpg"
+                          data-src="images/slider-img/slide5.jpg"
+                          alt=""
+                        />
+                      </picture>
+                    </div>
+                    <div class="slider__slide">
+                      <picture>
+                        <source
+                          type="image/avif"
+                          srcset="images/slider-img/slide-diplom.avif"
+                        />
+                        <source
+                          type="image/webp"
+                          srcset="images/slider-img/slide-diplom.webp"
+                        />
+                        <img
+                          class="slider__slide-img"
+                          src="images/slider-img/slide-diplom.jpg"
+                          data-src="images/slider-img/slide-diplom.jpg"
+                          alt=""
+                        />
+                      </picture>
+                    </div>
+                    <div class="slider__slide">
+                      <picture>
+                        <source
+                          type="image/avif"
+                          srcset="images/slider-img/slide-diplom.avif"
+                        />
+                        <source
+                          type="image/webp"
+                          srcset="images/slider-img/slide-diplom.webp"
+                        />
+                        <img
+                          class="slider__slide-img"
+                          src="images/slider-img/slide-diplom.jpg"
+                          data-src="images/slider-img/slide-diplom.jpg"
+                          alt=""
+                        />
+                      </picture>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider__contr slider__contr-2"></div>
+              </div>
+            </div>
+
+            <div class="psy__photo psy__photo--modif">
+              <div class="psy__square"></div>
+              <picture>
+                <source type="image/avif" srcset="images/Ivanova.avif" />
+                <source type="image/webp" srcset="images/Ivanova.webp" />
+                <img
+                  class="psy__image"
+                  src="images/Ivanova.png"
+                  data-src="images/Ivanova.png"
+                  alt=""
+                />
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="advantge">
       <div class="advantge__layout-grid layout">
         <h1 class="advantge__title title">Преимущества платной подписки</h1>
@@ -510,7 +785,7 @@
             шаги, которые можно выполнять индивидуально и/или с нашей помощью.
           </p>
         </div>
-       
+
         <div class="quest">
           <div class="quest__wrap-title-btn quest__wrap-title-btn--js">
             <h3 class="quest__question-title min-title">
