--- a/index.html
+++ b/index.html
@@ -828,6 +828,65 @@
         </div>
       </div>
     </section>
+
+    <section class="reviews">
+      <div class="reviews__container layout">
+        <h2 class="reviews__title title">Отзывы</h2>
+        <div class="reviews__slider">
+          <div class="reviews-slider">
+            <div class="reviews-slider__cont">
+              <div class="reviews-slider__slide">
+                <div class="reviews-slider__photo">
+                  <picture>
+                    <source
+                      type="image/avif"
+                      srcset="images/review-photo1.avif"
+                    />
+                    <source
+                      type="image/webp"
+                      srcset="images/review-photo1.webp"
+                    />
+                    <img
+                      src="images/review-photo1.png"
+                      data-src="images/review-photo1.png"
+                      alt=""
+                      class="reviews-slider__images"
+                    />
+                  </picture>
+                </div>
+                <div class="reviews-slider__desc">
+                  <h3 class="reviews-slider__title">Зая Космическая</h3>
+                  <div class="reviews-slider__text-desc">
+                    <p class="reviews-slider__text">
+                      Я начала терапию с Анной в 2018 году и мы работали около
+                      года. Важно сказать, что я не искала терапевта специально,
+                      потому что не решалась на терапию, и Анна предложила
+                      консультации сама, т.к. увидела мою в них потребность, за
+                      что я ей очень благодарна. До этого я не осознавала, что
+                      мои проблемы можно и нужно решать с психотерапевтом. Мы
+                      входили постепенно, сначала была предложена арт-терапия,
+                      т.к. специалист берет в расчет
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <ul class="reviews__contr-list">
+            <li class="reviews__contr-item">
+              <span class="reviews__contr-dot"></span>
+            </li>
+            <li class="reviews__contr-item">
+              <span class="reviews__contr-dot"></span>
+            </li>
+            <li class="reviews__contr-item">
+              <span class="reviews__contr-dot"></span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
     <section class="call">
       <picture>
         <source type="image/webp" srcset="images/call-bg-img.webp" />
