--- a/registration-autorization/registration.html
+++ b/registration-autorization/registration.html
@@ -91,18 +91,18 @@
                 <div class="form__inner-input">
                   <div class="form__wrap-title">
                     <h2 class="form__slide-title">
-                      Введите код отправленный по СМС
+                      Введите код, отправленный на email:
                     </h2>
-                    <div class="form__inner-tel-number">
-                      <p class="form__tel-number">8(902)518-01-85</p>
-                      <p class="form__tel-correction">Изменить номер</p>
+                    <div class="form__inner-email">
+                      <p class="form__email">Example@gmail.com</p>
+                      <p class="form__email-correction">Изменить почту</p>
                     </div>
                   </div>
                   <input
                     type="number"
                     name="code-verifi"
                     class="form__input"
-                    placeholder="Код из смс"
+                    placeholder="Код из сообщения"
                     autocomplete="off"
                     maxlength="4"
                   />
