--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="header__button-close"></div>
           </div>
           <a
-            href="authorization.html"
+            href="registration-autorization/index.html"
             class="header__pa-button header__pa-button--hover"
           >
             <span class="header__pa-button-anchor">Личный кабинет</span>
@@ -322,7 +322,6 @@
           <h1 class="about-as__title title">Lorem ipsum dolor sit amet</h1>
           <div class="psy">
             <div class="psy__photo">
-              <div class="psy__square"></div>
               <picture>
                 <source type="image/avif" srcset="images/AnnaNavay.avif" />
                 <source type="image/webp" srcset="images/AnnaNavay.webp" />
@@ -336,246 +335,56 @@
             </div>
             <div class="psy__desc psy-desc">
               <div class="psy-desc__text">
-                <h1 class="psy-desc__title">Анна Навай</h1>
+                <h3 class="psy-desc__title">Анна Навай</h3>
                 <p class="psy-desc__subtitle">
-                  Ведет работу в интегративном подходе, активно использует
-                  методы арт-терапии
+                  Изменения во время терапии происходят постепенно, но даже
+                  маленького шага в правильном направлении достаточно того,
+                  чтобы изменить и вкус жизни и траекторию жизненного пути.
                 </p>
               </div>
-              <div class="psy-desc__desc-time">
-                <div class="psy-desc__inner-time">
-                  <p class="psy-desc__num">7</p>
-                  <p class="psy-desc__label">лет опыта</p>
-                </div>
-                <div class="psy-desc__inner-time">
-                  <p class="psy-desc__num">150</p>
-                  <p class="psy-desc__label">часов личной терапии</p>
-                </div>
+              <div class="psy-desc__text">
+                <h3 class="psy-desc__title psy-desc__title--two">
+                  Психологические консультации в интегративном подходе:
+                </h3>
+                <p class="psy-desc__subtitle">
+                  социальная адаптация и коучинг; межнациональные браки;
+                  кросскультурные конфликты; тревога, страхи; пограничное
+                  расстройство личности; нарциссическое расстройство личности;
+                  синдром Аспергера;
+                </p>
               </div>
-              <div class="psy-desc__slider slider">
-                <div class="slider__contr slider__contr-1"></div>
-                <div class="slider__wrap">
-                  <div class="slider__mov-tape">
-                    <div class="slider__slide"></div>
-                    <div class="slider__slide">
-                      <picture>
-                        <source
-                          type="image/avif"
-                          srcset="images/slider-img/slide1.avif"
-                        />
-                        <source
-                          type="image/webp"
-                          srcset="images/slider-img/slide1.webp"
-                        />
-                        <img
-                          class="slider__slide-img"
-                          src="images/slider-img/slide1.jpg"
-                          data-src="images/slider-img/slide1.jpg"
-                          alt=""
-                        />
-                      </picture>
-                    </div>
-                    <div class="slider__slide">
-                      <picture>
-                        <source
-                          type="image/avif"
-                          srcset="images/slider-img/slide3.avif"
-                        />
-                        <source
-                          type="image/webp"
-                          srcset="images/slider-img/slide3.webp"
-                        />
-                        <img
-                          class="slider__slide-img"
-                          src="images/slider-img/slide3.jpg"
-                          data-src="images/slider-img/slide3.jpg"
-                          alt=""
-                        />
-                      </picture>
-                    </div>
-                    <div class="slider__slide">
-                      <picture>
-                        <source
-                          type="image/avif"
-                          srcset="images/slider-img/slide5.avif"
-                        />
-                        <source
-                          type="image/webp"
-                          srcset="images/slider-img/slide5.webp"
-                        />
-                        <img
-                          class="slider__slide-img"
-                          src="images/slider-img/slide5.jpg"
-                          data-src="images/slider-img/slide5.jpg"
-                          alt=""
-                        />
-                      </picture>
-                    </div>
-                    <div class="slider__slide">
-                      <picture>
-                        <source
-                          type="image/avif"
-                          srcset="images/slider-img/slide-diplom.avif"
-                        />
-                        <source
-                          type="image/webp"
-                          srcset="images/slider-img/slide-diplom.webp"
-                        />
-                        <img
-                          class="slider__slide-img"
-                          src="images/slider-img/slide-diplom.jpg"
-                          data-src="images/slider-img/slide-diplom.jpg"
-                          alt=""
-                        />
-                      </picture>
-                    </div>
-                    <div class="slider__slide">
-                      <picture>
-                        <source
-                          type="image/avif"
-                          srcset="images/slider-img/slide-diplom.avif"
-                        />
-                        <source
-                          type="image/webp"
-                          srcset="images/slider-img/slide-diplom.webp"
-                        />
-                        <img
-                          class="slider__slide-img"
-                          src="images/slider-img/slide-diplom.jpg"
-                          data-src="images/slider-img/slide-diplom.jpg"
-                          alt=""
-                        />
-                      </picture>
-                    </div>
-                  </div>
-                </div>
-                <div class="slider__contr slider__contr-2"></div>
-              </div>
+              <a class="psy-desc__button psy-desc__button--hover" href="#"
+                >Сертификаты и дипломы</a
+              >
             </div>
           </div>
 
           <div class="psy">
-            <div class="psy__desc psy-desc psy__desc--modif">
-              <div class="psy-desc__text psy-desc__text--modif">
-                <h1 class="psy-desc__title">Елена Иванова</h1>
+            <div class="psy__desc psy__desc--modif psy-desc">
+              <div class="psy-desc__text">
+                <h3 class="psy-desc__title">Елена Иванова</h3>
                 <p class="psy-desc__subtitle">
-                  Практика основана на работе с детьми. Имеет большой опыт в
-                  качестве детского психолога в школе
+                  Изменения во время терапии происходят постепенно, но даже
+                  маленького шага в правильном направлении достаточно того,
+                  чтобы изменить и вкус жизни и траекторию жизненного пути.
                 </p>
               </div>
-              <div class="psy-desc__desc-time">
-                <div class="psy-desc__inner-time">
-                  <p class="psy-desc__num">7</p>
-                  <p class="psy-desc__label">лет опыта</p>
-                </div>
-                <div class="psy-desc__inner-time">
-                  <p class="psy-desc__num">150</p>
-                  <p class="psy-desc__label">часов личной терапии</p>
-                </div>
+              <div class="psy-desc__text">
+                <h3 class="psy-desc__title psy-desc__title--two">
+                  Психологические консультации в интегративном подходе:
+                </h3>
+                <p class="psy-desc__subtitle">
+                  социальная адаптация и коучинг; межнациональные браки;
+                  кросскультурные конфликты; тревога, страхи; пограничное
+                  расстройство личности; нарциссическое расстройство личности;
+                  синдром Аспергера;
+                </p>
               </div>
-              <div class="psy-desc__slider slider">
-                <div class="slider__contr slider__contr-1"></div>
-                <div class="slider__wrap">
-                  <div class="slider__mov-tape">
-                    <div class="slider__slide"></div>
-                    <div class="slider__slide">
-                      <picture>
-                        <source
-                          type="image/avif"
-                          srcset="images/slider-img/slide1.avif"
-                        />
-                        <source
-                          type="image/webp"
-                          srcset="images/slider-img/slide1.webp"
-                        />
-                        <img
-                          class="slider__slide-img"
-                          src="images/slider-img/slide1.jpg"
-                          data-src="images/slider-img/slide1.jpg"
-                          alt=""
-                        />
-                      </picture>
-                    </div>
-                    <div class="slider__slide">
-                      <picture>
-                        <source
-                          type="image/avif"
-                          srcset="images/slider-img/slide3.avif"
-                        />
-                        <source
-                          type="image/webp"
-                          srcset="images/slider-img/slide3.webp"
-                        />
-                        <img
-                          class="slider__slide-img"
-                          src="images/slider-img/slide3.jpg"
-                          data-src="images/slider-img/slide3.jpg"
-                          alt=""
-                        />
-                      </picture>
-                    </div>
-                    <div class="slider__slide">
-                      <picture>
-                        <source
-                          type="image/avif"
-                          srcset="images/slider-img/slide5.avif"
-                        />
-                        <source
-                          type="image/webp"
-                          srcset="images/slider-img/slide5.webp"
-                        />
-                        <img
-                          class="slider__slide-img"
-                          src="images/slider-img/slide5.jpg"
-                          data-src="images/slider-img/slide5.jpg"
-                          alt=""
-                        />
-                      </picture>
-                    </div>
-                    <div class="slider__slide">
-                      <picture>
-                        <source
-                          type="image/avif"
-                          srcset="images/slider-img/slide-diplom.avif"
-                        />
-                        <source
-                          type="image/webp"
-                          srcset="images/slider-img/slide-diplom.webp"
-                        />
-                        <img
-                          class="slider__slide-img"
-                          src="images/slider-img/slide-diplom.jpg"
-                          data-src="images/slider-img/slide-diplom.jpg"
-                          alt=""
-                        />
-                      </picture>
-                    </div>
-                    <div class="slider__slide">
-                      <picture>
-                        <source
-                          type="image/avif"
-                          srcset="images/slider-img/slide-diplom.avif"
-                        />
-                        <source
-                          type="image/webp"
-                          srcset="images/slider-img/slide-diplom.webp"
-                        />
-                        <img
-                          class="slider__slide-img"
-                          src="images/slider-img/slide-diplom.jpg"
-                          data-src="images/slider-img/slide-diplom.jpg"
-                          alt=""
-                        />
-                      </picture>
-                    </div>
-                  </div>
-                </div>
-                <div class="slider__contr slider__contr-2"></div>
-              </div>
+              <a class="psy-desc__button psy-desc__button--hover" href="#"
+                >Сертификаты и дипломы</a
+              >
             </div>
-
             <div class="psy__photo psy__photo--modif">
-              <div class="psy__square"></div>
               <picture>
                 <source type="image/avif" srcset="images/Ivanova.avif" />
                 <source type="image/webp" srcset="images/Ivanova.webp" />
@@ -836,26 +645,8 @@
           <div class="reviews-slider">
             <div class="reviews-slider__cont">
               <div class="reviews-slider__slide">
-                <div class="reviews-slider__photo">
-                  <picture>
-                    <source
-                      type="image/avif"
-                      srcset="images/review-photo1.avif"
-                    />
-                    <source
-                      type="image/webp"
-                      srcset="images/review-photo1.webp"
-                    />
-                    <img
-                      src="images/review-photo1.png"
-                      data-src="images/review-photo1.png"
-                      alt=""
-                      class="reviews-slider__images"
-                    />
-                  </picture>
-                </div>
                 <div class="reviews-slider__desc">
-                  <h3 class="reviews-slider__title">Зая Космическая</h3>
+                  <h3 class="reviews-slider__title">Без имени</h3>
                   <div class="reviews-slider__text-desc">
                     <p class="reviews-slider__text">
                       Я начала терапию с Анной в 2018 году и мы работали около
