--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     <section class="about-as">
       <div class="about-as__container layout">
         <div class="about-as__wrap">
-          <h1 class="about-as__title title">Lorem ipsum dolor sit amet</h1>
+          <h1 class="about-as__title title">О нас</h1>
           <div class="psy">
             <div class="psy__photo">
               <picture>
@@ -334,25 +334,18 @@
               </picture>
             </div>
             <div class="psy__desc psy-desc">
-              <div class="psy-desc__text">
                 <h3 class="psy-desc__title">Анна Навай</h3>
                 <p class="psy-desc__subtitle">
-                  Изменения во время терапии происходят постепенно, но даже
+                  ...  Изменения во время терапии происходят постепенно, но даже
                   маленького шага в правильном направлении достаточно того,
-                  чтобы изменить и вкус жизни и траекторию жизненного пути.
+                  чтобы изменить и вкус жизни и траекторию жизненного пути  ...
                 </p>
-              </div>
-              <div class="psy-desc__text">
-                <h3 class="psy-desc__title psy-desc__title--two">
-                  Психологические консультации в интегративном подходе:
-                </h3>
-                <p class="psy-desc__subtitle">
-                  социальная адаптация и коучинг; межнациональные браки;
-                  кросскультурные конфликты; тревога, страхи; пограничное
-                  расстройство личности; нарциссическое расстройство личности;
-                  синдром Аспергера;
+                <p class="psy-desc__title-two">
+                  Психологические очные и он-лайн консультации в Санкт-Петербурге в интегративном подходе:
                 </p>
-              </div>
+                <p class="psy-desc__sub-subtitle">
+                  трудности в отношениях с родителями; кризисные ситуации; родственники инвалидов; тревога, страхи; нарушения сна; депрессия; травматические события, психологическое, физическое и экономическое насилие; эмоциональное выгорание; потеря близкого человека; развод; пограничное расстройство личности; нарциссическое расстройство личности; синдром Аспергера; социальная адаптация и коучинг; межнациональные браки; кросскультурные конфликты; навязчивые состояния.
+                </p>
               <a class="psy-desc__button psy-desc__button--hover" href="#"
                 >Сертификаты и дипломы</a
               >
@@ -361,25 +354,18 @@
 
           <div class="psy">
             <div class="psy__desc psy__desc--modif psy-desc">
-              <div class="psy-desc__text">
-                <h3 class="psy-desc__title">Елена Иванова</h3>
-                <p class="psy-desc__subtitle">
-                  Изменения во время терапии происходят постепенно, но даже
+              <h3 class="psy-desc__title">Елена Иванова</h3>
+              <p class="psy-desc__subtitle">
+                  ...  Изменения во время терапии происходят постепенно, но даже
                   маленького шага в правильном направлении достаточно того,
-                  чтобы изменить и вкус жизни и траекторию жизненного пути.
+                  чтобы изменить и вкус жизни и траекторию жизненного пути  ...
                 </p>
-              </div>
-              <div class="psy-desc__text">
-                <h3 class="psy-desc__title psy-desc__title--two">
-                  Психологические консультации в интегративном подходе:
-                </h3>
-                <p class="psy-desc__subtitle">
-                  социальная адаптация и коучинг; межнациональные браки;
-                  кросскультурные конфликты; тревога, страхи; пограничное
-                  расстройство личности; нарциссическое расстройство личности;
-                  синдром Аспергера;
+                <p class="psy-desc__title-two">
+                  Психологические очные и он-лайн консультации в Санкт-Петербурге в интегративном подходе:
                 </p>
-              </div>
+                <p class="psy-desc__sub-subtitle">
+                  трудности в отношениях с родителями; кризисные ситуации; родственники инвалидов; тревога, страхи; нарушения сна; депрессия; травматические события, психологическое, физическое и экономическое насилие; эмоциональное выгорание; потеря близкого человека; развод; пограничное расстройство личности; нарциссическое расстройство личности; синдром Аспергера; социальная адаптация и коучинг; межнациональные браки; кросскультурные конфликты; навязчивые состояния.
+                </p>
               <a class="psy-desc__button psy-desc__button--hover" href="#"
                 >Сертификаты и дипломы</a
               >
@@ -690,9 +676,9 @@
       </picture>
       <div class="call__wrap layout">
         <div class="call__inner-text">
-          <h3 class="call__title title">Звоните!</h3>
+          <h3 class="call__title title">Запишитесь на консультацию!</h3>
           <p class="call__subtitle min-title">
-            Мы на связи в любом удобном для вас сервисе или мессенджере
+            Запись на консультацию в любом удобном для Вас мессанджере. Мы отвечаем в течение дня.
           </p>
         </div>
         <div class="call__wrap-number">
